恢复人脸信息和修复按照时间查询会议室的bug